WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250738
[WebGPU] RemoteBufferProxy::mapAsync does not call completion handler when the call fails
https://bugs.webkit.org/show_bug.cgi?id=250738
Summary
[WebGPU] RemoteBufferProxy::mapAsync does not call completion handler when th...
Mike Wyrzykowski
Reported
2023-01-17 16:38:59 PST
[WebGPU] RemoteBufferProxy::mapAsync does not call completion handler when the call fails
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2023-01-17 16:39:14 PST
radar://104356354
Mike Wyrzykowski
Comment 2
2023-01-17 18:20:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8750
EWS
Comment 3
2023-01-18 12:52:40 PST
Committed
259047@main
(e6ba22533cb9): <
https://commits.webkit.org/259047@main
> Reviewed commits have been landed. Closing PR #8750 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug