[WebGPU] RemoteBufferProxy::mapAsync does not call completion handler when the call fails https://bugs.webkit.org/show_bug.cgi?id=250738 <radar://104356354>

Reviewed by Myles C. Maxfield.

GPUBuffer.mapAsync returns Promise<undefined>, so we can't return a
GPUError, but we still need to call the completion handler.

Discovered running the conformance test suite.

* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteBufferProxy.cpp:
(WebKit::WebGPU::RemoteBufferProxy::mapAsync):
Call the completion handler.

Canonical link: https://commits.webkit.org/259047@main